crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsafe_lemma_leftover_raw_req.rs
/*@
unsafe fn leaves_i32_cell(p: Ptr)
  raw req PointsTo(p.addr, {type i32}, Option::Some(0i32))
{
}
*/

fn main() {}
